크레딧용 끄투엔딩 임시 추가

--- a/Server/package.json
+++ b/Server/package.json
@@ -16,5 +16,8 @@
     "electron": "^1.4.15",
     "electron-packager": "^8.5.1",
     "electron-pug": "^1.5.1"
+  },
+  "dependencies": {
+    "diff-match-patch": "^1.0.5"
   }
 }
