--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ Server/run.bat
 Server/node_modules
 Server/lib/node_modules
 Server/lib/Web/public
-!Server/lib/Web/public/js/jquery.js
-!Server/lib/Web/public/js/fabric.min.js
-!Server/lib/Web/public/js/diff-match-patch-compressed.js
+Server/lib/Web/public/_next
 Server/lib/sub/auth.json
 Server/lib/sub/global.json
 .vscode
