--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-Client/node_modules
+Client/node_modules/
 Server/run.bat
-Server/node_modules
-Server/lib/node_modules
-Server/lib/Web/public
-Server/lib/Web/public/_next
+Server/node_modules/
+Server/lib/node_modules/
+Server/lib/Web/public/
+Server/lib/Web/public/_next/
 Server/lib/sub/auth.json
 Server/lib/sub/global.json
-.vscode
+node_modules/
+.vscode/
