--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -8,6 +8,7 @@
   ],
   "author": "JJoriping",
   "dependencies": {
+    "@google-cloud/logging": "^11.0.0",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "connect-redis": "^3.2.0",
@@ -21,12 +22,13 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^2.1.0",
+    "object.pick": "^1.3.0",
     "passport": "^0.4.0",
     "passport-daldalso": "^1.0.8",
     "passport-discord": "^0.1.3",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
-    "passport-google-oauth2": "^0.1.6",
+    "passport-google-oauth2": "^0.2.0",
     "passport-instagram": "^1.0.0",
     "passport-kakao": "^1.0.1",
     "passport-line": "0.0.4",
