--- a/Client/package.json
+++ b/Client/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "client",
+  "name": "kkutu",
   "version": "1.0.0",
-  "description": "",
+  "description": "플러스끄투 클라이언트",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "build": "electron-builder build"
+    "build": "electron-builder build",
+    "pack": "electron-builder --windows"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": "https://github.com/Plus-Platforms/KKuTu",
   "dependencies": {
-    "electron": "^28.0.0",
+    "discord-rpc": "^4.0.1",
     "open": "^9.1.0"
   },
   "devDependencies": {
-    "electron-reload": "^2.0.0-alpha.1"
+    "electron": "^28.2.0",
+    "electron-builder": "^24.9.1",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-updater": "^6.1.7"
   },
   "build": {
     "appId": "cc.kkutu",
     "files": [
-      "나의소중한파일들의경로"
+      "**/*"
     ],
     "win": {
-      "target": [{
-        "target": "nsis",
-        "arch": [
-          "x64",
-          "ia32"
-        ]
-      }],
-      "icon": "나의소중한아이콘경로.ico"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ],
+      "icon": "assets/icon.ico"
     },
     "nsis": {
       "oneClick": false,
@@ -39,10 +46,12 @@
       "allowToChangeInstallationDirectory": true,
       "language": 1042,
       "include": "build/installer.nsh",
-      "shortcutName": "단축아이콘 이름"
+      "shortcutName": "플러스끄투",
+      "artifactName": "install-${version}.${ext}"
     },
     "directories": {
-      "output": "빌드를마친파일이가야할경로"
-    }
+      "output": "out/"
+    },
+    "publish": null
   }
 }
