--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -22,6 +22,7 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^2.1.0",
+    "kkutu-server": "file:..",
     "object.pick": "^1.3.0",
     "passport": "^0.4.0",
     "passport-daldalso": "^1.0.8",
