--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -12,6 +12,7 @@
   "author": "JJoriping",
   "dependencies": {
     "@google-cloud/logging": "^11.0.0",
+    "async": "^3.2.5",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "connect-redis": "^3.2.0",
