--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -41,11 +41,11 @@
     "passport-spotify": "^1.1.0",
     "passport-twitch": "^1.0.3",
     "passport-twitter": "^1.0.4",
-    "pg": "^8.0.3",
+    "pg": "^8.11.5",
     "pg-escape": "^0.2.0",
     "pug": "^2.0.4",
     "request": "^2.88.2",
     "ws": "^3.3.1"
   },
-  "license": "GPL-3.0"
+  "license": "AGPL-3.0"
 }
