--- a/Server/package.json
+++ b/Server/package.json
@@ -11,7 +11,7 @@
     "kkutu"
   ],
   "author": "JJoriping",
-  "license": "GPL-3.0",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "electron": "^1.4.15",
     "electron-packager": "^8.5.1",
