--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google-cloud/logging": "^11.0.0",
     "async": "^3.2.5",
+    "axios": "^1.6.8",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "connect-redis": "^3.2.0",
@@ -20,6 +21,7 @@
     "diff-match-patch": "^1.0.5",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "fs": "^0.0.1-security",
     "glob": "^7.1.2",
     "glob-promise": "^3.3.0",
     "grunt": "^1.3.0",
