메인페이지 리뉴얼 작업

--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kkutu-core",
-  "version": "3.4",
+  "version": "k3.4.1",
   "description": "Rule the words! KKuTu Online Core",
   "repository": "https://github.com/JJoriping/KKuTu",
   "keywords": [
