--- a/Server/package.json
+++ b/Server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kkutu-server",
-  "version": "3.4",
+  "version": "k3.4.1",
   "description": "Rule the words! KKuTu Online Server",
   "main": "main.js",
   "scripts": {
