--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -7,7 +7,8 @@
     "kkutu"
   ],
   "scripts": {
-    "build": "grunt default pack"
+    "build": "cd ../../Front && npm run build && cd ../Server/lib && webpack",
+    "optimize": "node optimization/webp.js"
   },
   "author": "JJoriping",
   "dependencies": {
@@ -48,7 +49,12 @@
     "pg-escape": "^0.2.0",
     "pug": "^2.0.4",
     "request": "^2.88.2",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.91.0",
     "ws": "^3.3.1"
   },
-  "license": "AGPL-3.0"
+  "license": "AGPL-3.0",
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
+  }
 }
